[gd_scene load_steps=2 format=2]

[ext_resource path="res://game/hud/button.gd" type="Script" id=1]

[node name="Button" type="Button"]

self_modulate = Color( 0.698039, 0.698039, 0.698039, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
flat = false
align = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Visibility" ]

[connection signal="button_down" from="." to="." method="_on_Button_button_down"]

[connection signal="mouse_entered" from="." to="." method="_on_Button_mouse_entered"]

[connection signal="mouse_exited" from="." to="." method="_on_Button_mouse_exited"]


